2013-04-16  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css
	images/blade.png: Aesthetic changes
		
	* include/ajax/events.php
	include/functions_ui.php
	include/javascript/pandora_events.js
	operation/events/events.build_table.php
	operation/events/events.php
	include/functions_config.php: Add the readonly
	mode to events list when the new option is 
	enabled on setup

2013-04-16 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/setup/setup.php: updated the method to fill the header
	with the new header.

2013-04-16  Sergio Martin <sergio.martin@artica.es>

	* include/functions_ui.php
	images/information_big.png
	images/help2.png
	images/info.png
	images/information.png: Add new information icon for
	ui messages

2013-04-16  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/ver_agente.php
	godmode/agentes/configurar_agente.php: Fixed double truncate
	in header. Now the truncate is encapsulated into header
	function

2013-04-15  Sergio Martin <sergio.martin@artica.es>

	* general/header.php: Adding id to the header table
	to avoid jquery malfunctions in other places

2013-04-15  Sergio Martin <sergio.martin@artica.es>

	* include/functions_html.php
	include/styles/pandora.css
	include/functions_ui.php
	include/functions_graph.php
	include/functions_events.php
	include/graphs/fgraph.php
	operation/events/events_list.php
	operation/agentes/alerts_status.php
	operation/agentes/estado_generalagente.php
	operation/agentes/estado_monitores.php
	images/help.png
	images/blade.png
	images/image_problem_pie.png
	images/input_module.png
	images/err.png
	images/image_problem_area.png
	images/input_agent.png
	images/help_w.png
	images/suc.png
	images/image_problem_bars.png
	images/information.png: Change new icons, modernize the
	error, success and info messages and more aesthetic changes
	Fix warning and notices from previous commit

2013-04-15 Miguel de Dios <miguel.dedios@artica.es>
